# sport-events-to-calendar

./: .gitignore  README.md  basket-cpliege.ipynb  basket-to-calendar.py  listing.md  pyproject.toml  requirements.txt  sport-events-to-calendar.ipynb
.github/workflows/: actions.yml  actions.yml.disable
data/: CPLiège.ics  all-events.json  manifest.json
data/1034-rbc-haneffe/: .ics  1034-rbc-haneffe.csv  aw212002.ics  aw212004.ics  aw212008.ics  aw212010.ics  aw232001.ics  aw232005.ics  awbb-dd-poule-d.ics  awbb-dd-poule-l.ics  awbb-mm-poule-l.ics  awbb-mm-poule-m.ics  coupe-awbb-cadets.ics  coupe-awbb-messieurs.ics  coupe-awbb-minimes-mm.ics  coupe-awbb-pupilles-mm.ics  coupe-awbb-u18-garcons.ics  cpe-prov-dames.ics  cpe-prov-messieurs.ics  cpe-prov-minimes-mm.ics  cpe-prov-pupilles-dd.ics  dd-division-1.ics  dd-division-2-a.ics  dd-division-2-b.ics  dd-division-3-a.ics  dd-division-3-b.ics  dd-division-3-c.ics  dd-regionale-2-a.ics  dd-regionale-2-b.ics  events.json  mm-division-1.ics  mm-division-2-b.ics  mm-division-3-a.ics  mm-division-3-b.ics  mm-division-4-a.ics  mm-division-4-e.ics  mm-regionale-2-a.ics  provinciale-dd-poule-c.ics  provinciale-mm-poule-ff.ics  u-10-mm-h.ics  (+36 more)
data/1058-bc-belleflamme/: 1058-bc-belleflamme.csv  aw207001.ics  aw207004.ics  aw207007.ics  aw207013.ics  awbb-dd-poule-a.ics  awbb-dd-poule-h.ics  awbb-dd-poule-j.ics  (+111 more)
docs/: index.html
web/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
(+5534 files in other folders)
