[project]
name = "sport-events-to-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "beautifulsoup4==4.12.3",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "comm==0.2.2",
    "debugpy==1.8.5",
    "decorator==5.1.1",
    "executing==2.0.1",
    "html5lib==1.1",
    "icalendar==5.0.13",
    "idna==3.7",
    "jedi==0.19.1",
    "lxml-html-clean>=0.4.2",
    "lxml==5.3.0",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "packaging==24.1",
    "pandas==2.2.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.2.2",
    "prompt-toolkit==3.0.47",
    "psutil==6.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2024.1",
    "pyzmq==26.1.0",
    "requests==2.32.3",
    "six==1.16.0",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "text-unidecode==1.3",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "uuid==1.30",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "rich>=14.1.0",
]
